<resources>
    <string name="app_name">vedoohfarms</string>
    <string name="string_get_started">GET STARTED</string>
    <string name="start_title_string">VedoohFarms</string>
    <string name="start_desc_string">Bridging the gap between farmers and consumers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_title2">Affordable</string>
    <string name="start_desc_string2">Get farm products at cheaper rates than market prices</string>
    <string name="start_title3">Fresh</string>
    <string name="start_desc_string3">VeedohFarms supplies products fresh, directly from the farm</string>
    <string name="start_title4">Secure</string>
    <string name="start_desc_string4">Make purchases with the safest payment gateway available</string>
    <string name="start_title5">Know the Farms</string>
    <string name="start_desc_string5">Enlighten yourself about the farms, products are gotten</string>
    <string name="title_activity_category">Categories</string>
    <string name="bean_seed_image_desc">Bean seed icons</string>
    <string name="corn_icon_desc">Icon of corn</string>
    <string name="cash_icon_desc">Cash icon that represents affordability</string>
    <string name="app_icon_desc">Icon that repreents vedooh farms</string>
    <string name="usernmae_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="string_login">LOG IN</string>
    <string name="string_forgot_pass">FORGOTTEN PASSWORD?</string>
    <string name="string_create_account">CREATE NEW ACCOUNT</string>
    <string name="string_create_account_sub">Create New Account</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="page_one_title">Sign Up With Us</string>
    <string name="signup_page_one_details_string">We\'ll guide you through creating a new account in a few easy steps</string>
    <string name="string_next">Next</string>
    <string name="fullname_title_string">What\'s your name?</string>
    <string name="fullname_details_string">Using your real name makes it easier for us to address and identify you</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Surname</string>
    <string name="title_activity_test">Test</string>
    <string name="toolbar_title">Create Account</string>
    <string name="default_title">Title</string>
    <string name="email_title_string">Enter your email and password</string>
    <string name="email_details_string">You\'ll use this email and password to log in</string>
    <string name="hint_email">Email Address</string>
    <string name="mobile_title_string">Enter your mobile number</string>
    <string name="mobile_details_string">Using an active mobile number helps us to contact you for better service</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="home_address_title_string">Enter your current address</string>
    <string name="home_address_details_string">Enter your current postal address for efficient delivery service</string>
    <string name="hint_home_address">Address</string>
    <string name="bday_title_string">What\'s Your Date of Birth</string>
    <string name="bday_details_string">Giving your birthday enhances your customer experience with the app.</string>
    <string name="gender_title_string">Select your gender</string>
    <string name="gender_details_string">Selecting your gender enables us to identify you specifically for better service</string>
    <string name="rb_male_text">Male</string>
    <string name="rb_female_string">Female</string>
    <string name="password_title_string">Enter your password</string>
    <string name="hint_password">Password</string>
    <string name="password_details_string">Choose a password you\'ll easily remember but unique enough to provide adequate security for your account</string>
    <string name="terms_policy_title_string">Complete Sign Up</string>
    <string name="terms_policy_details_string">By signing up, you have agreed to our Terms and that you have read our Data Policy, including our Cookie Use. You may receive message via Email, SMS or Phone calls according to the personal information you provided. This details will not be shared in any way with a third-party. Personal contact are required to offer efficient services.</string>
    <string name="string_signup">Sign Up</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_title_string">Welcome to VedoohFarms</string>
    <string name="access_text">Log in to your account</string>
    <string name="field_required_error">This field is required</string>

    <string name="facebook_app_id">294871697588397</string>
    <string name="fb_login_protocol_scheme">fb294871697588397</string>
    <string name="gplus_access">or with google plus</string>
    <string name="or_string">or else</string>
    <string name="login_string">Log in</string>
    <string name="fb_continue">"Continue "</string>
    <string name="vedooh_farm_string">Vedoohfarms</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">IXzLmPmdXYS4LMwuzL3uJimt5</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">JZxAvRfgCdPAOhQPeM0kMwmErYYTZTQutIUx1y1UyfRdbOTkL4</string>
    <string name="fb_btn_login_string">LOG IN WITH FACEBOOK</string>
    <string name="twt_button_text">LOG IN WITH TWITTER</string>
    <string name="btn_login_email_text">SIGNUP WITH EMAIL</string>
    <string name="have_account_string">Already have an account?</string>
    <string name="login_here_string">log in here</string>
    <string name="login_toolbar_title">Log In</string>
    <string name="empty"> </string>

    <string name="cancel_signup_popup_title">Cancel Account Creation</string>
    <string name="cancel_signup_message_string">Are you sure you want to cancel account creation?  This will discard any information you have provided so far.</string>
    <string name="btnNo">No</string>
    <string name="btnYes">Yes</string>
    <string name="gender_alert_title_string">No Gender Selected</string>
    <string name="gender_alert_msg_string">You did not select any gender. Please select a gender to proceed.</string>
    <string name="title_activity_reset_password">Find Account</string>
    <string name="hint_find_acct">Email</string>
    <string name="find_account_info_string">Please enter your email address to receive a confirmation code</string>
    <string name="find_acct_string">FIND YOUR ACCOUNT</string>
    <string name="confirm_account_title_string">Your email matches this account. Click to continue.</string>
    <string name="string_fullname">Full Name:</string>
    <string name="receive_code_string">Receive confirmation code via email</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Home</string>
    <string name="item_desc_string">This a description of this item to give the user the best knowledge of the food item and to learn more about it\'s usage and consumption.</string>
    <string name="unit_text_string">Kg/g</string>
    <string name="qty_default_value">0</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="like_tags">UNCLICKED</string>
    <string name="txt_search_string">Search</string>
    <string name="profile_string">Profile</string>
    <string name="message_string">Messages</string>
    <string name="sort_string">Sort</string>
    <string name="preferences_string">Preferences</string>
    <string name="general_string">General</string>
    <string name="help_string">Help</string>
    <string name="about_string">About</string>
    <string name="logout_string">Log Out</string>
    <string name="btn_less_desc">To reduce quantity value</string>
    <string name="btn_more_desc">To increase quantity value</string>
    <string name="btn_add_to_bag_image">Bag image for add to cart</string>
    <string name="btn_order_close_desc">Close button to close order dialog</string>
    <string name="company_biz_image_desc">Description of the farm business speciality</string>
    <string name="darken_img_desc">Dark image view to darken image</string>
    <string name="products_string">Products</string>
    <string name="location_string">Location:</string>
    <string name="img_ctry_flag_desc">Image of country flag to show the location of a farm</string>
    <string name="company_name_string">Company Name</string>
    <string name="comp_details_string">Details</string>
    <string name="list_products_string">List of Products</string>
    <string name="company_info_icon_desc">Open detailed page of company</string>
    <string name="home_share_desc">Share button on home page</string>
    <string name="item_image_tint_desc">This item view is used to darken the background of item in search page</string>
    <string name="item_img_desc">This the image container of items in search</string>
    <string name="item_like_img_btn_desc">This the like button to like items on search page</string>
    <string name="img_btn_item_share_dsc">Button to share item details on social media</string>
    <string name="item_add_to_bag">Button to add items to kart</string>
    <string name="item_details_img_back_tint_dsc">Imageview to darken background of item details</string>
    <string name="img_btn_cancel_item_details">Close button of item details</string>
    <string name="likes_string">Likes</string>
    <string name="sold_string">Sold</string>
    <string name="img_likes_count_desc">Likes image to show number of likes</string>
    <string name="img_sold_count_desc">Image to show number of item sold</string>
    <string name="favorites_string">Favorites</string>
    <string name="purchases_string">Purchases</string>
    <string name="likes_sample">100</string>
    <string name="home_share_small_icon_desc">Home share button icon</string>
    <string name="home_share_fav_icon">Home favorite button icon</string>
    <string name="favs_image_text_desc">Favourites image</string>
    <string name="img_fav_sold_count_desc">Image to show how many times an item is sold</string>
    <string name="string_50">50</string>
    <string name="img_fav_icon_desc">Favourite icons to add and remove favourites</string>
    <string name="string_180">180</string>
    <string name="notifications_string">Notifications</string>
    <string name="back_arrow_desc">Back arrow to close notification page</string>
    <string name="title_activity_order_item">Orders</string>
    <string name="btn_clear_desc">Description of clear button of edit text</string>
    <string name="read_more_string">Read more</string>
    <string name="btn_close_item_details_desc">Close button for item details</string>
    <string name="nutrition_string">Nutrition Value</string>
</resources>
