<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/profile_string" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_bag_default"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/title_activity_order_item" />

        <item
            android:id="@+id/nav_sort"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort_string" />

        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_settings_cogwheel_button"
            android:title="@string/preferences_string" />
    </group>

    <item android:title="@string/general_string">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_icon"
                android:title="@string/help_string" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_string" />

            <item android:title="@string/logout_string"
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_sign_out" />
        </menu>
    </item>

</menu>
