<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_terms_policy"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/login_top_padding_left_right"
    android:paddingRight="@dimen/login_top_padding_left_right"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/login_top_padding_left_right"
    android:paddingStart="@dimen/login_top_padding_left_right"
    tools:context=".signups.fragments.FragmentEmail" >


    <TextView
        android:text="@string/terms_policy_title_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/signup_title_margin_top"
        android:id="@+id/terms_policy_title"
        android:textSize="@dimen/singup_title_text_size"
        android:textColor="@color/custom_dark_gray"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:text="@string/terms_policy_details_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/terms_policy_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/signup_details_margin_top"
        android:id="@+id/terms_policy_details"
        android:textSize="@dimen/signup_details_text_size"
        android:textColor="@color/custom_light_gray"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/fullname_edit_margin_bottom"
        android:fontFamily="sans-serif"/>

    <Button
        android:text="@string/string_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_login_height"
        android:id="@+id/btn_complete_signup"
        android:background="@drawable/button_corners"
        android:textSize="@dimen/signup_details_text_size"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/terms_policy_details"
        android:fontFamily="sans-serif-light"/>

</RelativeLayout>

